--- a/style.css
+++ b/style.css
@@ -1,1 +1,200 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
 
+body{
+    height: 100vh;
+    position: relative;
+}
+
+p{
+    font-size: 1.75rem;
+    font-weight: 100;
+    padding: .75rem;
+}
+
+ul{
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+li{
+    font-size: 1rem;
+    font-weight: 100;
+    padding: .25rem 0;
+}
+
+.heading{
+    font-size: 1.5rem;
+    font-weight: 100;
+}
+
+h1 {
+    font-size: 4.5rem;
+    font-weight: 400;
+}
+
+
+header{
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 10%;
+}
+
+.header-block-left, .header-block-right{
+    display: flex;
+    gap: 2rem;
+}
+
+.header-block-left{
+    margin-left: 7.5%;
+}
+
+.header-block-right{
+    margin-right: 7.5%;
+}
+
+.submit, .sign-in{
+    border: 1px solid white;
+    padding: .5rem 2rem;
+    border-radius: .5rem;
+    cursor: pointer;
+}
+
+.submit{
+    background-color: rgb(26, 26, 26);
+}
+
+.sign-in{
+    background-color: #4C5FD5;
+    border: none;
+    transition: 200ms;
+}
+
+.sign-in:hover{
+    background-color: white;
+    color: black;
+    transition: 200ms;
+}
+
+.help-center{
+    border-left: 1px solid white;
+    padding-left: 2rem;
+}
+
+.search{
+    background-color: #dadbf1;
+    min-height: 45%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+}
+
+input{
+    margin-top: 2%;
+    min-width: 30px;
+    max-width: 700px;
+    width: 70%;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: .5rem;
+    font-size: 1.2rem;
+    
+}
+
+::placeholder{
+    opacity: 70%;
+}
+
+input:hover{
+    border: 1px solid #6735c3;
+}
+
+.learn{
+    /* padding-left: 7.5%;
+    padding-right: 7.5%;
+    padding-top: 4%; */
+    padding: 4% 7.5%
+}
+
+.learn-row{
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+
+}
+
+.learn-row-one, .learn-row-two{
+    /* display: inline-block; */
+    min-width: 200px;
+    width: 40%;
+    overflow-wrap: break-word;
+}
+
+.p-bold{
+    font-weight: 600;
+}
+
+.learn-more{
+    color: #625cd5;
+    cursor: pointer;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    padding: 2% 7.5%;
+
+}
+
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-options{
+    justify-content: left;
+}
+
+.footer-options-logo{
+    width: 20%;
+}
+.p-bold-two{
+    font-weight: 400;
+    padding: .5rem 0;
+}
+
+.copyright-container{
+    display: flex;
+    justify-content: right;
+}
+
+.copyright-info{
+    width: 20%;
+
+}
+
+.copyright-p{
+    font-size: 1.25rem;
+    padding: .25rem 0;
+}
+
+.help{
+    position: fixed;
+    color: white;
+    background-color: #4C5FD5;
+    bottom: 1.5%;
+    right: 1%;
+    padding: .75rem 2rem;
+    border-radius: 3rem;
+    cursor: pointer;
+
+}
