--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ li{
 h1 {
     font-size: 4.5rem;
     font-weight: 400;
+    /* min-width: 300px; */
 }
 
 
@@ -49,11 +50,13 @@ header{
 
 .header-block-left, .header-block-right{
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .header-block-left{
     margin-left: 7.5%;
+    /* padding-top: -5rem;
+    padding-bottom: -5rem; */
 }
 
 .header-block-right{
@@ -84,8 +87,8 @@ header{
 }
 
 .help-center{
-    border-left: 1px solid white;
-    padding-left: 2rem;
+    border-left: 2px solid white;
+    padding-left: 1rem;
 }
 
 .search{
@@ -95,6 +98,7 @@ header{
     flex-flow: column;
     align-items: center;
     justify-content: center;
+    min-width: 500px;
 }
 
 input{
@@ -106,7 +110,12 @@ input{
     border: 1px solid black;
     border-radius: .5rem;
     font-size: 1.2rem;
+    box-shadow:0rem .1rem 1rem 0rem rgba(0, 0, 0, 0.2);
     
+}
+
+input:focus{
+    outline: none;
 }
 
 ::placeholder{
@@ -128,15 +137,39 @@ input:hover{
     margin-top: 5rem;
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
 
 }
 
 .learn-row-one, .learn-row-two{
     /* display: inline-block; */
-    min-width: 200px;
-    width: 40%;
+    display: flex;
+    justify-content:flex-start;
+    width: 45%;
     overflow-wrap: break-word;
+    min-width: 200px;
+}
+
+.learn-logos{
+    width: 6rem;
+    height: auto;
+    object-fit: contain;
+    /* border: 2px solid black ; */
+}
+
+.block-one{
+    margin-right: 2%;
+    padding-top: 1rem;
+    /* flex-grow: 1; */
+}
+
+.block-two{
+    margin: 0;
+    margin-left: 0;
+    /* border: 2px solid black; */
+    flex-grow: 1;
+    padding-right: 0;
+    /* margin-left: -4rem; */
 }
 
 .p-bold{
