--- a/style.css
+++ b/style.css
@@ -86,6 +86,23 @@ header{
     transition: 200ms;
 }
 
+@media (max-width: 1200px){
+    .submit, .sign-in{
+        display:none;
+    }
+    .menu-logo{
+        display: flex;
+    }
+}
+
+@media (min-width: 1201px){
+   .menu-logo{
+    display:none;
+   } 
+}
+
+
+
 .help-center{
     border-left: 2px solid white;
     padding-left: 1rem;
@@ -179,6 +196,25 @@ input:hover{
 .learn-more{
     color: #625cd5;
     cursor: pointer;
+}
+
+@media (max-width: 800px){
+    .learn-row{
+        display: block;
+        width: 100%;
+        margin-top: 1rem;
+    }
+    .learn-row-one, .learn-row-two{
+        width: 100%;
+}
+
+    h1{
+        font-size: 2.8rem;
+    }
+
+    .footer-container{
+        display: inline;
+    }
 }
 
 footer{
